<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingVertical="21dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_your_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/your_information"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <TextView
        android:id="@+id/txt_enter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/bio"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_your_info" />

    <LinearLayout
        android:id="@+id/box_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/txt_enter">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="156dp"
                android:layout_height="156dp"
                app:cardCornerRadius="78dp"
                app:cardPreventCornerOverlap="false">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="156dp"
                    android:layout_height="156dp"
                    android:background="@drawable/rounded_image"
                    android:contentDescription="@string/avatar"
                    android:src="@drawable/avatar" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="7dp"
                android:autofillHints="Type your full name"
                android:background="@drawable/bottom_line"
                android:inputType="text"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_edittext"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="18dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="7dp"
                android:autofillHints="Type your location"
                android:background="@drawable/bottom_line"
                android:inputType="text"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_edittext"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/box_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints="Type your phone number"
            android:background="@drawable/bottom_line"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_edittext"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints="Type your email"
            android:background="@drawable/bottom_line"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_edittext"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/pre_pay"
                android:layout_width="39dp"
                android:layout_height="39dp"
                android:buttonTint="@color/yellow"
                android:scaleX="1.5"
                android:scaleY="1.5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/pre_pay"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/autofill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_gray"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:text="@string/autofill"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="68dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_yellow"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:text="@string/reset"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>